# bevy_dnd

./: Cargo.toml  README.md
assets/: monsters.ron
src/: ability.rs  combat.rs  dice.rs  lib.rs  main.rs
src/character/: ability.rs  alignment.rs  mod.rs  stats.rs
