[package]
name = "bevy_dnd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.1" }
bevy-inspector-egui = "0.19.0"
bevy_common_assets = { version = "0.7.0", features = ["ron"] }
bevy_proto = "0.11.0"
bevy_turborand = "0.6.0"
thiserror = "1.0.45"
